Fix style on mobile menu tag

--- a/wp-content/themes/bosibackend/assets/css/global.css
+++ b/wp-content/themes/bosibackend/assets/css/global.css
@@ -28,6 +28,11 @@ code {
   font-size: 12px !important;
 }
 
+menu {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   color: #42b983;
 }
